<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alldebrid</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="error_account_not_premium">Your account is not premium</string>
    <string name="error_ip_not_allowed">Your IP is blacklisted</string>
    <string name="error_host_maintenance">Host under maintenance</string>
    <string name="error_no_server_available">We used all our bandwidth :\'(</string>
    <string name="error_no_traffic">Too much download on this hoster for today</string>
    <string name="error_down_on_hoster">This link is down</string>
    <string name="error_hoster_not_supported">Hoster not supported (or something went wrong)</string>
    <string name="error_max_simu_down">Too much download on this hoster</string>
    <string name="error_unknown">Something went wrong </string>
    <string name="loading">Loading…</string>
    <string name="username">Username</string>
    <string name="create_account"><a href="http://www.alldebrid.com/register/">Create an account</a></string>
    <string name="icon">Navigation drawer Icon</string>
    <string name="account">Account</string>
    <string name="torrent">Torrents</string>
    <string name="setting">Settings</string>
    <string name="links">links</string>
    <string name="link">link</string>
    <string name="try_again">Try again</string>
    <string name="unrestrain_link">Unrestrain your links and magnets</string>
    <string name="debrid">Debrid this</string>
    <string name="traffic_info">Traffic information</string>
    <string name="your_best_speed_on_AD">Best speed on AD:</string>
    <string name="connection_type">Connection type:</string>
    <string name="total_downloaded">Total downloaded:</string>
    <string name="limited_hosts">Limited Hosts</string>
    <string name="debridLinks">Debrid links</string>
    <string name="logout">Log out</string>
    <string name="not_acknowledged">NA</string>
    <string name="desc_overflow_button">Overflow Button</string>
    <string name="action_remove">Remove</string>
    <string name="copy_links">Copy unrestrainedLink</string>
    <string name="debrid_torrent">Pick a torrent file</string>
    <string name="checkbox_split_torrent_file">Split the file (1 part = 1 Gb)</string>
    <string name="automatic_copy_paste">Automatic copy paste</string>
    <string name="automatic_download">Automatic download</string>
    <string name="use_built_in_download_manager">Use the built-in download manager</string>
    <string name="download">Download</string>
    <string name="general">General</string>
</resources>
