<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_primary"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="8dp"
            android:src="@drawable/robot" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/material_text_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:paddingTop="8dp" />

        <TextView
            style="@style/material_text_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingTop="8dp" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/loginButton"
            style="@style/material_text_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/brand_primary"
            custom:pb_colorPressed="@color/brand_primary_accent"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/success"
            custom:pb_textError="@string/error"
            custom:pb_textProgress="@string/loading" />

        <TextView
            android:id="@+id/tv_createAccount"
            style="@style/material_text_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingTop="8dp"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/logoutButton"
            style="@style/material_text_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/logout"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>