<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sha"
        android:orientation="vertical"
        android:padding="@dimen/space_content">

        <TextView
            style="@style/material_text_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unrestrain_link" />

        <EditText
            android:id="@+id/etUnrestrainLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:minLines="2" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/bUnrestrainLink"
            style="@style/material_text_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_touch_target"
            android:layout_marginBottom="@dimen/space_content"
            android:text="@string/debrid"
            android:textColor="@android:color/white"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/brand_primary"
            custom:pb_colorPressed="@color/brand_primary_accent"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/success"
            custom:pb_textError="@string/error"
            custom:pb_textProgress="@string/loading" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>